force-app/main/default/objects/Disclaimer_Response__c/Disclaimer_Response__c.object-meta.xml
<CustomObject>
    <description>This object is used to store which disclaimers the patient agrees to while scheduling the appointments in Elixir.</description>
    <label>Disclaimer Response</label>
    <nameField>
        <label>Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclaimer Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>