force-app/main/default/objects/Disclaimer_Response__c/fields/Acceptance_from_Patient__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_from_Patient__c</fullName>
    <description>This field will ensure whether the patient has accepted the terms and conditions.</description>
    <label>Acceptance from Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>