force-app/main/default/objects/Disclaimer_Response__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field will be storing disclaimer content.</description>
    <label>Description</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>