force-app/main/default/objects/Disclaimer_Response__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be storing disclaimer record against the disclaimer response.</description>
    <label>Disclaimer</label>
    <referenceTo>Disclaimer__c</referenceTo>
    <relationshipLabel>Disclaimer Response</relationshipLabel>
    <relationshipName>Disclaimer_Response</relationshipName>
    <type>Lookup</type>
</CustomField>