force-app/main/default/objects/Disclaimer_Response__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>This field will be storing event Id against the disclaimer response.</description>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>