force-app/main/default/objects/Disclaimer_Response__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>This field will be storing event description against the disclaimer response.</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>