force-app/main/default/objects/Disclaimer_Response__c/fields/Input_Text__c.field-meta.xml
<CustomField>
    <fullName>Input_Text__c</fullName>
    <label>Input Text</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>