force-app/main/default/objects/Disclaimer_Response__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field will be storing event name against the disclaimer response.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>