force-app/main/default/objects/Disclaimer_Response__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be storing Patient record against the disclaimer response.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disclaimer Response</relationshipLabel>
    <relationshipName>Disclaimer_Response</relationshipName>
    <type>Lookup</type>
</CustomField>